# WarpPI

./: .classpath  .cproject  .gitignore  .project  Algebra Cheat Sheet.rtf  LICENSE  MmapByteBuffer.java  README.md  build.gradle  functions_Division.ser  math-rules-cache.zip114  out.txt  pom.xml  pom.xml.versionsBackup  settings.gradle  teavm-pom.xml
gradle/wrapper/: gradle-wrapper.properties
libs/objenesis-2.4/: NOTICE
res/: font_big.rft  font_big_2x.rft  font_ex.rft  font_small.rft  font_small_2x.rft  font_square.rft  marioground.xcf  marioskin.xcf  skin.xcf  temp.rft
src/com/rits/cloning/: Cloner.java  CloningException.java  FastClonerArrayList.java  FastClonerCalendar.java  FastClonerConcurrentHashMap.java  FastClonerCustomCollection.java  FastClonerCustomMap.java  FastClonerHashMap.java  FastClonerHashSet.java  FastClonerLinkedList.java  FastClonerTreeMap.java  IDeepCloner.java  IDumpCloned.java  IFastCloner.java  IFreezable.java  IInstantiationStrategy.java  Immutable.java  ObjenesisInstantiationStrategy.java
src/com/rits/perspectives/: Perspectives.java
src/main/jni/: .gitignore  CMakeLists.txt  TestJNI.c  TestJNI.cpp  TestJNI.h  makefile  makefileOLD
src/main/resources/: default-rules.lst  font_32.rft  font_big.rft  font_big_2x.rft  font_norm.rft  font_smal.rft  font_small_2x.rft  font_smallest.rft  font_square.rft  marioskin.xcf  math-rules.csv  old_font_small_2x.rft  rules.csv  skin.xcf
src/main/resources/rules/: ExpandRule1.java  ExpandRule1.js  (+65 more)
warppicalculatorapp/: build.gradle
warppicalculatorapp/src/main/: AndroidManifest.xml
(+686 files in other folders)
